--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -11,7 +11,9 @@
 
 /* Base styles */
 body {
-  font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+  font-family: "Share Tech Mono", monospace;
+  font-weight: 400;
+  font-style: normal;
   line-height: 1.6;
   background-color: #f9fafb;
   padding-top: 4.5rem; /* Prevent content under navbar */
@@ -90,6 +92,7 @@ nav {
 input, textarea {
   margin-left: 12px;
   margin-right: 12px;
+  margin-bottom: 10px;
   transition: all 0.2s ease;
   /* margin-bottom: -2; */
   border: 1px solid #d1d5db;
@@ -146,6 +149,9 @@ input:focus, textarea:focus {
   /* width: 100%; */
   /* font-size: 15px; */
   gap: 165px;
+}
+#skill-checkbox{
+  margin-right: -120px ;
 }
 
 /* Button styles */
