Add search functionality and new skills to SkillsSection; update styles for search input

--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -153,6 +153,15 @@ input:focus, textarea:focus {
 #skill-checkbox{
   margin-right: -120px ;
 }
+#skill-search{
+  display: flex;
+  position: relative;
+  top: -40px;
+  left: 80%;
+  justify-content: end;
+  width: 60%;
+  text-align: start;
+}
 
 /* Button styles */
 button {
