--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -77,7 +77,7 @@ nav {
   margin-left: 50px;
 }
 #socials-input {
-  width: 60%;
+  width: 90%;
   text-align: center;
 }
 #socials-input:focus::placeholder {
@@ -153,7 +153,7 @@ input:focus, textarea:focus {
 #skill-checkbox{
   margin-right: -120px ;
 }
-#skill-search{
+/* #skill-search{
   display: flex;
   position: relative;
   top: -40px;
@@ -161,6 +161,59 @@ input:focus, textarea:focus {
   justify-content: end;
   width: 60%;
   text-align: start;
+} */
+
+
+/* From Uiverse.io by LightAndy1 */ 
+.group {
+  display: flex;
+  line-height: 28px;
+  align-items: center;
+  position: relative;
+  max-width: 190px;
+}
+
+.input {
+  font-family: "Montserrat", sans-serif;
+  width: 100%;
+  height: 45px;
+  padding-left: 2.5rem;
+  box-shadow: 0 0 0 1.5px #2b2c37, 0 0 25px -17px #000;
+  border: 0;
+  border-radius: 12px;
+  background-color: #16171d;
+  outline: none;
+  color: #bdbecb;
+  transition: all 0.25s cubic-bezier(0.19, 1, 0.22, 1);
+  cursor: text;
+  z-index: 0;
+}
+
+.input::placeholder {
+  color: #bdbecb;
+}
+
+.input:hover {
+  box-shadow: 0 0 0 2.5px #2f303d, 0px 0px 25px -15px #000;
+}
+
+.input:active {
+  transform: scale(0.95);
+}
+
+.input:focus {
+  box-shadow: 0 0 0 2.5px #2f303d;
+}
+
+.search-icon {
+  position: absolute;
+  left: 1.5rem;
+  top: 1.6rem;
+  fill: #bdbecb;
+  width: 1rem;
+  height: 1rem;
+  pointer-events: none;
+  z-index: 1;
 }
 
 /* Button styles */
