Updates in the Icons from App.jsx

--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -71,11 +71,11 @@ nav {
 #socials-grid{
   padding: 25px;
   display: grid;
-  grid-template-columns: repeat(2, minmax(120px, 1fr));
+  grid-template-columns: repeat(6, minmax(120px, 1fr));
   gap: 50px;
   align-items: center;
   justify-items: center;
-  margin-left: 50px;
+  /* margin-left: 50px; */
 }
 #socials-input {
   width: 90%;
@@ -88,7 +88,6 @@ nav {
 #socials-item{
   align-items: center;
   display: flex;
-  
 }
 /* Input and textarea styles */
 input, textarea {
