Changes in the Layout for the preview in the GitHub Add-ons

--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -595,3 +595,11 @@ input:focus, textarea:focus {
   margin-bottom: 10px;
 
 }
+#github-profile-preview-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  text-align: center;
+  gap: 10px;
+}
