--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -805,3 +805,26 @@ input:focus, textarea:focus {
   text-align: center;
   gap: auto;
 }
+
+#footer{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  text-align: center;
+  gap: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-right: 35px;
+  margin-left: 35px;
+}
+#footer a{
+  color: #3b82f6;
+  text-decoration: none;
+}
+#footer a:hover{
+  color: #2563eb;
+}
+#footer a:active{
+  color: #1d4ed8;
+}
