--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -876,3 +876,54 @@ input:focus, textarea:focus {
   width: 50%;
   height: 300px;
 }
+#typing-svg-markdown pre{
+  width: 100%;
+  height: 100%;
+  flex-wrap: wrap;
+}
+
+#color-circle{
+  display: flex;
+  gap: 10px;
+  justify-content: start;
+  flex-direction: row;
+}
+#color-circle-inner{
+  width: 24px;
+  height: 24px;
+}
+#typing-svg-preview{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+}
+#typing-svg-preview img{
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+#remove-line-button{
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  color: white;
+  font-size: 18px;
+}
+#remove-line-button:hover{
+  color: #3b82f6;
+}
+#remove-line-button:active{
+  color: red;
+}
+#remove-line-button:focus{
+  color: red;
+}
+.font-tooltip {
+  pointer-events: none;
+}
+span:hover .font-tooltip {
+  display: block !important;
+  pointer-events: auto;
+}
