--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -1014,7 +1014,7 @@ html {
   /* width: 100%; */
   /* height: 100%; */
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   text-align: center;
