--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -556,16 +556,18 @@ input:focus, textarea:focus {
   display: flex;
   align-items: center;
   justify-content: flex-start;
-  gap: 10px;
+  /* gap: 100px; */
   margin-right: 600px;
   margin-left: 10px;
-  width: auto;
+  min-width: 100%;
+  /* width: auto; */
 }
 #work-section-field-label{
   width: 100%;
+  /* margin-left: 100px; */
+  /* margin-right: 2px; */
   text-align: left;
-  /* margin-left: 10px; */
-  /* margin-right: 10px; */
+  margin-right: -200px;
 }
 #work-section-field-input{
   width: 200%;
@@ -903,22 +905,6 @@ input:focus, textarea:focus {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-#remove-line-button{
-  background: transparent;
-  border: none;
-  cursor: pointer;
-  color: white;
-  font-size: 18px;
-}
-#remove-line-button:hover{
-  color: #3b82f6;
-}
-#remove-line-button:active{
-  color: red;
-}
-#remove-line-button:focus{
-  color: red;
 }
 .font-tooltip {
   pointer-events: none;
