Changes in the <a></a> in the markdown for the Worksection

--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -1116,3 +1116,9 @@ html {
   font-weight: 400;
   height: 30px;
 }
+
+.markdown-body a {
+  color: #111 !important;
+  font-weight: bold;
+  font-size: 1.15em;
+}
