--- a/github-readme-generator/src/index.css
+++ b/github-readme-generator/src/index.css
@@ -40,10 +40,11 @@
   background: #2b2b2b;
   /* border-top-left-radius: 8px; */
   /* border-top-right-radius: 8px; */
-  background-image: url("data:image/svg+xml;utf8,<svg fill='gray' height='10' viewBox='0 0 24 24' width='10' xmlns='http://www.w3.org/2000/svg'><path d='M7 14l5-5 5 5z'/></svg>");
+  background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='10' viewBox='0 0 24 24' width='10' xmlns='http://www.w3.org/2000/svg'><path d='M7 14l5-5 5 5z'/></svg>");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 6px;
+  background-size: 26px;
+  cursor: pointer;
 }
 
 /* Bottom (increment) arrow button */
@@ -52,10 +53,11 @@
   background: #2b2b2b;
   /* border-bottom-left-radius: 8px; */
   /* border-bottom-right-radius: 8px; */
-  background-image: url("data:image/svg+xml;utf8,<svg fill='gray' height='10' viewBox='0 0 24 24' width='10' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
+  background-image: url("data:image/svg+xml;utf8,<svg fill='white' height='10' viewBox='0 0 24 24' width='10' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/></svg>");
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 6px;
+  background-size: 26px;
+  cursor: pointer;
 }
 
 /* Base styles */
@@ -1329,4 +1331,10 @@ html {
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+#choose-option{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 30px;
 }
